--- a/services/tables/src/main/resources/application.properties
+++ b/services/tables/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.web.resources.add-mappings=false
+spring.mvc.static-path-pattern=favicon.ico
+spring.web.resources.static-locations=classpath:/static
 spring.codec.max-in-memory-size=10MB
 springdoc.packages-to-scan=com.linkedin.openhouse.tables
 springdoc.swagger-ui.disable-swagger-default-url=true
