--- a/infra/recipes/docker-compose/common/debug-profile/jobs.yml
+++ b/infra/recipes/docker-compose/common/debug-profile/jobs.yml
@@ -3,4 +3,4 @@ services:
     ports:
       - 6005:6005
     environment:
-      - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,address=6005,suspend=n
+      - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,address=*:6005,suspend=n
