--- a/settings.gradle
+++ b/settings.gradle
@@ -37,6 +37,10 @@ include ':integrations:spark:openhouse-spark-itest'
 include ':integrations:spark-extensions'
 include ':integrations:java:openhouse-java-runtime'
 include ':integrations:java:openhouse-java-itest'
+include ':integrations:java-iceberg-1.5:openhouse-java-runtime'
+include ':integrations:java-iceberg-1.5:openhouse-java-itest'
+include ':integrations:spark-3.5:openhouse-spark-runtime'
+include ':integrations:spark-3.5:openhouse-spark-itest'
 
 include ':iceberg:openhouse:htscatalog'
 include ':iceberg:openhouse:internalcatalog'
@@ -59,3 +63,8 @@ include ':scripts:java:tools:dummytokens'
 project(':integrations:spark:openhouse-spark-runtime').name = 'openhouse-spark-runtime_2.12'
 project(':apps:spark').name = 'openhouse-spark-apps_2.12'
 project(':tables-test-fixtures').name = 'tables-test-fixtures_2.12'
+
+project(':integrations:java-iceberg-1.5:openhouse-java-runtime').name = 'openhouse-java-iceberg-1.5-runtime'
+project(':integrations:java-iceberg-1.5:openhouse-java-itest').name = 'openhouse-java-iceberg-1.5-itest'
+project(':integrations:spark-3.5:openhouse-spark-runtime').name = 'openhouse-spark-3.5-runtime_2.12'
+project(':integrations:spark-3.5:openhouse-spark-itest').name = 'openhouse-spark-3.5-itest'
