working spark3.5 mor compaction

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,7 @@ pluginManagement {
 rootProject.name = 'openhouse'
 
 include ':apps:spark'
+include ':apps:spark-3.5'
 
 include ':client:common'
 include ':client:hts'
