--- a/apps/spark/build.gradle
+++ b/apps/spark/build.gradle
@@ -18,6 +18,13 @@ ext {
 dependencies {
     implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
 
+    implementation project(':libs:datalayout')
+
+    implementation("org.apache.iceberg:iceberg-bundled-guava:${icebergVersion}")
+    implementation("org.apache.iceberg:iceberg-data:${icebergVersion}")
+    implementation("org.apache.iceberg:iceberg-core:${icebergVersion}")
+    implementation("org.apache.iceberg:iceberg-common:${icebergVersion}")
+
     compileOnly (project(path: openhouseSparkRuntimeModule)) {
         exclude group: 'io.netty'
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
