--- a/buildSrc/src/main/groovy/openhouse.apps-spark-conventions.gradle
+++ b/buildSrc/src/main/groovy/openhouse.apps-spark-conventions.gradle
@@ -1,7 +1,6 @@
 plugins {
   id 'openhouse.java-conventions'
   id 'openhouse.hadoop-conventions'
-  id 'openhouse.iceberg-conventions-1.2'
   id 'openhouse.maven-publish'
   id 'com.github.johnrengelman.shadow'
 }
@@ -14,15 +13,6 @@ configurations {
   shadow.extendsFrom implementation
 }
 
-ext {
-//  sparkVersion = '3.5.2'
-//  icebergVersion = '1.5.2'
-//  sparkVersionSuffix = "-3.5"
-//  openhouseSparkRuntimeModule = ":integrations:spark${sparkVersionSuffix}:openhouse-spark${sparkVersionSuffix}-runtime_2.12"
-//  icebergSparkRuntimeModule = "org.apache.iceberg:iceberg-spark-runtime-3.5_2.12:${icebergVersion}"
-//  tablesTestFixturesModule = ":tables-test-fixtures-iceberg-1.5_2.12"
-}
-
 dependencies {
   implementation project(':iceberg:openhouse:internalcatalog')
   implementation project(':client:hts')
@@ -31,7 +21,12 @@ dependencies {
   implementation project(':client:secureclient')
   implementation project(':services:common')
   implementation project(':cluster:storage')
-  implementation project(':libs:datalayout')
+
+  implementation("org.apache.iceberg:iceberg-bundled-guava")
+  implementation("org.apache.iceberg:iceberg-data")
+  implementation("org.apache.iceberg:iceberg-core")
+  implementation("org.apache.iceberg:iceberg-common")
+
   implementation ('org.apache.hadoop:hadoop-common:2.10.0') {
     exclude group: 'io.netty'
     exclude group: 'org.apache.curator', module: 'curator-client'
@@ -44,6 +39,7 @@ dependencies {
   implementation 'org.springframework.retry:spring-retry:1.3.3'
   implementation "org.apache.logging.log4j:log4j-slf4j-impl"
   implementation 'com.fasterxml.woodstox:woodstox-core:6.2.7'
+  implementation('org.testcontainers:testcontainers:1.19.8')
 
   // open telemetry related classed. Latest Okhttp version is 4.10.0, pinning to 4.9.3 to avoid dependency issues
   implementation 'com.squareup.okhttp3:okhttp:' + ok_http3_version
