--- a/apps/spark/build.gradle
+++ b/apps/spark/build.gradle
@@ -15,6 +15,14 @@ ext {
     tablesTestFixturesModule = ":tables-test-fixtures_2.12"
 }
 
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == "org.apache.iceberg") {
+            details.useVersion(icebergVersion)
+        }
+    }
+}
+
 dependencies {
     implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
 
