--- a/apps/spark/build.gradle
+++ b/apps/spark/build.gradle
@@ -15,42 +15,45 @@ ext {
     tablesTestFixturesModule = ":tables-test-fixtures_2.12"
 }
 
-configurations.all {
-    resolutionStrategy.eachDependency { details ->
-        if (details.requested.group == "org.apache.iceberg") {
-            details.useVersion(icebergVersion)
-        }
-    }
-}
-
 dependencies {
-    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
-
-    implementation project(':libs:datalayout')
-
-    implementation("org.apache.iceberg:iceberg-bundled-guava:${icebergVersion}")
-    implementation("org.apache.iceberg:iceberg-data:${icebergVersion}")
-    implementation("org.apache.iceberg:iceberg-core:${icebergVersion}")
-    implementation("org.apache.iceberg:iceberg-common:${icebergVersion}")
-
     compileOnly (project(path: openhouseSparkRuntimeModule)) {
         exclude group: 'io.netty'
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'org.apache.hadoop', module: 'hadoop-client'
     }
 
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
+    implementation project(':libs:datalayout')
+    implementation("org.apache.iceberg:iceberg-bundled-guava") {
+        version {
+            strictly("${icebergVersion}")
+        }
+    }
+    implementation("org.apache.iceberg:iceberg-data") {
+        version {
+            strictly("${icebergVersion}")
+        }
+    }
+    implementation("org.apache.iceberg:iceberg-core") {
+        version {
+            strictly("${icebergVersion}")
+        }
+    }
+    implementation("org.apache.iceberg:iceberg-common") {
+        version {
+            strictly("${icebergVersion}")
+        }
+    }
     implementation ('org.apache.spark:spark-core_2.12:' + sparkVersion) {
         exclude group: 'io.netty'
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'org.apache.hadoop', module: 'hadoop-client'
     }
-
     implementation ('org.apache.spark:spark-sql_2.12:' + sparkVersion) {
         exclude group: 'io.netty'
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'org.apache.hadoop', module: 'hadoop-client'
     }
-
     implementation (icebergSparkRuntimeModule) {
         exclude group: 'io.netty'
     }
@@ -60,10 +63,7 @@ dependencies {
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'org.apache.hadoop', module: 'hadoop-client'
     }
-
     testImplementation(project(tablesTestFixturesModule)) {
         exclude group: "io.netty"
     }
 }
-
-test.dependsOn "${openhouseSparkRuntimeModule}:build"
