mostly working regression tests for hikaricp, failing random test

--- a/infra/recipes/docker-compose/oh-hadoop/docker-compose.yml
+++ b/infra/recipes/docker-compose/oh-hadoop/docker-compose.yml
@@ -13,6 +13,25 @@ services:
       - datanode
       - prometheus
       - opa
+    profiles:
+      - default
+
+  openhouse-tables-override:
+    container_name: local.openhouse-tables-override
+    extends:
+      file: ../common/oh-services.yml
+      service: openhouse-tables
+    image: oh-hadoop-openhouse-tables-override:latest
+    volumes:
+      - ./:/var/config/
+    depends_on:
+      - openhouse-housetables
+      - namenode
+      - datanode
+      - prometheus
+      - opa
+    profiles:
+      - override
 
   openhouse-housetables:
     container_name: local.openhouse-housetables
