--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ ext {
 }
 
 group = 'com.linkedin.openhouse'
-version = '0.0.6-SNAPSHOT'
+version = project.hasProperty('publicationVersion') ? project.property('publicationVersion') : '0.0.19-SNAPSHOT'
 
 subprojects {
   buildDir = "${rootProject.buildDir}/${project.name}"
